fix: various issues on Safari
- Unable to login
- Visual bug with the `OrganizationCard`

--- a/app/components/OrganizationCard/index.css
+++ b/app/components/OrganizationCard/index.css
@@ -1,4 +1,4 @@
 .icon {
-  width: 100px;
-  height: auto;
+  width: auto;
+  height: 100px;
 }
